--- a/example/package.json
+++ b/example/package.json
@@ -7,7 +7,8 @@
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "file:../node_modules/react-scripts",
-    "react-super-useform": "file:.."
+    "react-super-useform": "file:..",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "node ../node_modules/react-scripts/bin/react-scripts.js start",
