--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "react-super-useform",
-	"version": "0.1.30",
+	"version": "0.1.35",
 	"description": "An advanced and easy to use useForm hook for React",
 	"author": "anthonyjeamme",
 	"license": "MIT",
 	"repository": "anthonyjeamme/react-super-useform",
+	"homepage": "https://anthonyjeamme.github.io/react-super-useform",
 	"main": "dist/index.js",
 	"module": "dist/index.modern.js",
 	"source": "src/index.tsx",
