--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-super-useform",
-	"version": "0.1.37",
+	"version": "0.1.43",
 	"description": "An advanced and easy to use useForm hook for React",
 	"author": "anthonyjeamme",
 	"license": "MIT",
@@ -52,5 +52,9 @@
 		"react-dom": "^16.13.1",
 		"react-scripts": "^3.4.1"
 	},
-	"files": ["dist"]
+	"files": ["dist"],
+	"dependencies": {
+		"@types/uniqid": "^5.2.0",
+		"uniqid": "^5.2.0"
+	}
 }
